bugfix: helper-box made body overflow

--- a/include/css/helper.css
+++ b/include/css/helper.css
@@ -13,7 +13,7 @@
     position: absolute;
     /* left: 50px;
     top: 50%; */
-    width: 30%;
+    max-width: 400px;
     z-index: 1000;
 	background: var(--helper-background-color);
     border: 4px solid var(--helper-border-color);
